# piece-of-earth

./: README.md  piece-of-earth.cabal  stack.yaml
resources/: README.txt
resources/fonts/: purisa-70.fnt  ubuntu-mono-45.fnt
resources/heightmaps/: ter2-513x513.r16  ter3-1025x1025.r16
resources/shaders/: entity.frag  entity.vert  skybox.frag  skybox.vert  skydome.frag  skydome.vert  terrain.frag  terrain.vert  terrainSocket.vert
src/: Main.hs
src/App/: Animate.hs  Callback.hs  Options.hs  Render.hs  Setup.hs  State.hs  Teardown.hs
src/Engine/: Animate.hs  Callback.hs  Options.hs  Render.hs  Setup.hs  State.hs  Teardown.hs
src/Graphics/: Camera.hs  Fog.hs  GUI.hs  Lights.hs  SkyBox.hs  SkyDome.hs  Terrain.hs  TerrainSocket.hs  Types.hs
src/Graphics/Lights/: AmbientLight.hs  LightEmitter.hs  Material.hs
src/Simulation/: Atmosphere.hs
