name:                piece-of-earth
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/psandahl/piece-of-earth#readme
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@gmail.com
copyright:           2017 Patrik Sandahl
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable piece-ef-earth
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Engine.Animate
                       Engine.Callback
                       Engine.Options
                       Engine.Render
                       Engine.Setup
                       Engine.State
                       Engine.Teardown
                       Graphics.Camera
                       Graphics.Fog
                       Graphics.GUI
                       Graphics.SkyDome
                       Graphics.Terrain
                       Graphics.TerrainSocket
                       Graphics.Types
                       Graphics.Lights.AmbientLight
                       Graphics.Lights.LightEmitter
                       Graphics.Lights.Material
                       Simulation.Atmosphere
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , big-engine
                     , filepath
                     , linear
                     , optparse-applicative
                     , OpenGLRaw
                     , vector
  ghc-options:         -Wall -Werror -O2
